--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
     "body-parser": "latest",
     "config": "latest",
     "cookie-parser": "latest",
+    "dotenv": "latest",
     "express": "latest",
     "express-session": "latest",
     "geocoder": "latest",
     "method-override": "latest",
-    "moment": "latest",
+    "moment"
+    : "latest",
     "mongoose": "latest",
     "request": "latest",
-    "withings-lib": "latest",
-    "load-env": "^1.3.6"
+    "withings-lib": "latest"
   },
   "devDependencies": {},
   "scripts": {
